[package]
name = "tzim-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dkregistry = { git = "https://github.com/camallo/dkregistry-rs.git" }
futures = "0.3"
tracing = "0"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dependencies.async-std]
version = "1"
features = ["attributes", "tokio1"]
